# GWASTutorial

./: 404.html  README.md  convert_notebook_to_md.py  deploy.sh  generate_wordcloud.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  requirements.txt
00_Introduction/: README.md
01_Dataset/: 1kgeas_binary.txt  1kgeas_binary_regenie.txt  JPT.sample  README.md  add_and_check_missing.ipynb  add_missing.sh  download_sampledata.sh  index.html  integrated_call_male_samples_v3.20130502.ALL.panel  simulate.sh
02_Linux_basics/: README.md  index.html
03_Data_formats/: README.md  index.html  sample_data.csv  sample_data.tsv  sample_text.txt
04_Data_QC/: Check_distribution.ipynb  README.md  index.html  run.sh  run_QC.sh
05_PCA/: README.md  extract_highld.sh  high-ld-hg19.txt  index.html  plot_PCA.ipynb  run.sh  run_pca.sh
06_Association_tests/: README.md  Visualization.ipynb  index.html  plot_data.ipynb  run.sh  run_association_test.sh
07_Annotation/: 0_format_sumstats.sh  1_annovar.sh  README.md  index.html
08_LDSC/: 0_munge.sh  1_ldsc_h2.sh  2_ldsc_rg.sh  3_ldsc_partitioned.sh  4_ldsc_seg.sh  README.md  download_data.sh  index.html  miami.ipynb
09_Gene_based_analysis/: 0_format.sh  1_annotation.sh  2_gene_based_tests.sh  3_gene_set_tests.sh  README.md  index.html
10_PRS/: PRS_evaluation.md  README.md  clumping.sh  extract.py  extract.sh  index.html  prs_tutorial.ipynb
11_meta_analysis/: README.md  index.html
12_fine_mapping/: README.md  calculate_ldr.sh  finemapping_susie.ipynb  index.html  sig_locus.snplist  (+1 more)
(+223 files in other folders)
